--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DATABASE_URL=postgres://myuser:mypassword@localhost:5432/geminiApp
 GEMINI_API_KEY=AIzaSyDSIQA5aORqgGliEzxLOiwWn40n4n9coKE
-REDIS_URL=
+REDIS_URL=redis://localhost:6379
 STRIPE_SECRET_KEY=
