--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "ngrok": "^5.0.0-beta.2",
     "node-cache": "^5.1.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3",
